CON-86: Update package name

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "mvp-corporate-design",
+  "name": "@rplan/corporate-design",
   "version": "0.1.0",
-  "description": "Theme and components based on the corporate design for the MVP",
+  "description": "Theme for Material UI and components based on the corporate design.",
+  "author": "Actano GmbH (https://rplan.com/)",
   "main": "lib/index.js",
   "module": "src/index.js",
-  "repository": "https://github.com/actano/mvp-corporate-design.git",
+  "repository": "https://github.com/actano/rplan-corporate-design.git",
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^3.9.3"
