--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@rplan/corporate-design",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Theme for Material UI and components based on the corporate design.",
   "author": "Actano GmbH (https://rplan.com/)",
-  "main": "lib/index.js",
-  "module": "src/index.js",
+  "main": "src/index.js",
   "repository": "https://github.com/actano/rplan-corporate-design.git",
   "license": "MIT",
   "peerDependencies": {
