--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storybook/addon-options": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "storybook-addon-jsx": "^7.1.2",
     "storybook-addon-material-ui": "^0.9.0-alpha.19"
   },
