--- a/package.json
+++ b/package.json
@@ -12,15 +12,9 @@
   "devDependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "@storybook/addon-actions": "^5.0.11",
-    "@storybook/addon-info": "^5.0.11",
-    "@storybook/addon-knobs": "^5.0.11",
-    "@storybook/addon-options": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "storybook-addon-jsx": "^7.1.2",
-    "storybook-addon-material-ui": "^0.9.0-alpha.19"
+    "react": "^16.8.6"
   },
   "scripts": {
     "storybook": "start-storybook -c ./storybook/config -p 8085"
