--- a/package.json
+++ b/package.json
@@ -13,10 +13,16 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@storybook/react": "^5.0.11",
+    "eslint": "^5.3.0",
+    "eslint-config-actano": "^10.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6"
   },
   "scripts": {
+    "lint": "eslint --ext js,jsx src storybook",
     "storybook": "start-storybook -c ./storybook/config -p 8085"
   },
   "dependencies": {
