CON-319: Fix lint errors

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,3 +1,10 @@
 root: true
 extends:
 - actano
+
+rules:
+  import/no-extraneous-dependencies:
+  - error
+  - devDependencies:
+    - 'storybook/**/*.js'
+    - 'storybook/**/*.jsx'
