--- a/package.json
+++ b/package.json
@@ -10,18 +10,26 @@
     "@material-ui/core": "^3.9.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
+    "babel-loader": "^8.0.6",
     "eslint": "^5.3.0",
     "eslint-config-actano": "^10.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.0"
+    "eslint-plugin-react": "^7.11.0",
+    "react-dom": "^16.8.6",
+    "webpack": "^4.32.2"
   },
   "scripts": {
     "lint": "eslint --ext js,jsx src storybook",
-    "storybook": "start-storybook -c ./storybook/config -p 8085"
+    "storybook": "start-storybook -c ./storybook/config -p 8085",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "classnames": "^2.2.6",
