--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@material-ui/styles": "^4.1.2",
     "classnames": "^2.2.6",
+    "gravatar": "^1.8.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6"
   }
