--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@storybook/react": "^5.0.11",
     "babel-loader": "^8.0.6",
     "eslint": "^5.3.0",
-    "eslint-config-actano": "^10.0.0",
+    "eslint-config-actano": "^11.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-react-hooks": "^1.6.1",
     "react-dom": "^16.8.6",
     "webpack": "^4.32.2"
   },
