CON-635: Add support for service annotations

--- a/charts/corporate-design/values.yaml
+++ b/charts/corporate-design/values.yaml
@@ -16,6 +16,7 @@ service:
   name: corporate-design
   type: ClusterIP
   port: 80
+  annotations: {}
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
