--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "repository": "https://github.com/actano/rplan-corporate-design.git",
   "license": "MIT",
   "peerDependencies": {
-    "@material-ui/core": "^4.0.2"
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
