--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
   },
   "dependencies": {
     "@date-io/core": "^1.3.11",
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/pickers": "^3.2.6",
     "@material-ui/styles": "^4.1.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.4.1",
     "gravatar": "^1.8.0",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6"
   }
