--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
   "repository": "https://github.com/actano/rplan-corporate-design.git",
   "license": "MIT",
   "peerDependencies": {
-    "@material-ui/core": "^4.0.2",
-    "@material-ui/icons": "^4.2.1"
+    "@material-ui/pickers": "^3.2.6",
+    "@material-ui/styles": "^4.1.2",
+    "@material-ui/core": "^4.1.2",
+    "@material-ui/icons": "^4.2.1",
+    "@date-io/date-fns": "^1.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@date-io/core": "^1.3.11",
+    "@date-io/date-fns": "^1.3.11",
+    "date-fns": "2.1.0",
+    "@material-ui/pickers": "^3.2.6",
+    "@material-ui/styles": "^4.1.2",
     "@material-ui/core": "^4.1.2",
     "@material-ui/icons": "^4.2.1",
     "@storybook/addon-actions": "^5.0.11",
@@ -26,6 +34,7 @@
     "eslint-plugin-react": "^7.11.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "react-dom": "^16.8.6",
+    "lodash": "^4.17.15",
     "webpack": "^4.32.2"
   },
   "scripts": {
@@ -34,14 +43,8 @@
     "build-storybook": "build-storybook -c ./storybook/config"
   },
   "dependencies": {
-    "@date-io/core": "^1.3.11",
-    "@date-io/date-fns": "^1.3.11",
-    "@material-ui/pickers": "^3.2.6",
-    "@material-ui/styles": "^4.1.2",
     "classnames": "^2.2.6",
-    "date-fns": "^2.4.1",
     "gravatar": "^1.8.0",
-    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6"
   }
