--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rplan/corporate-design",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Theme for Material UI and components based on the corporate design.",
   "author": "Actano GmbH (https://rplan.com/)",
   "main": "src/index.js",
@@ -21,31 +21,31 @@
     "@babel/core": "^7.4.5",
     "@date-io/core": "^1.3.11",
     "@date-io/date-fns": "^1.3.11",
-    "date-fns": "2.1.0",
-    "@material-ui/pickers": "^3.2.6",
-    "@material-ui/styles": "^4.1.2",
     "@material-ui/core": "^4.1.2",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.6",
+    "@material-ui/styles": "^4.1.2",
     "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-links": "^5.0.11",
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "babel-loader": "^8.0.6",
+    "date-fns": "2.1.0",
     "eslint": "^5.3.0",
     "eslint-config-actano": "^11.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "react-dom": "^16.8.6",
     "lodash": "^4.17.15",
+    "react-dom": "^16.8.6",
     "webpack": "^4.32.2"
   },
   "peerDependencies": {
-    "@material-ui/pickers": "^3.2.6",
-    "@material-ui/styles": "^4.1.2",
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.1.2",
     "@material-ui/icons": "^4.2.1",
-    "@date-io/date-fns": "^1.3.11"
+    "@material-ui/pickers": "^3.2.6",
+    "@material-ui/styles": "^4.1.2"
   }
 }
