--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "classnames": "^2.2.6",
     "gravatar": "^1.8.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6"
+    "react": "^16.8.6",
+    "date-fns": "2.1.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -30,14 +32,12 @@
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "babel-loader": "^8.0.6",
-    "date-fns": "2.1.0",
     "eslint": "^5.3.0",
     "eslint-config-actano": "^11.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "lodash": "^4.17.15",
     "react-dom": "^16.8.6",
     "webpack": "^4.32.2"
   },
