--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "gravatar": "^1.8.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@date-io/core": "^1.3.11",
-    "@date-io/date-fns": "^1.3.11",
+    "react": "^16.8.6",
     "@material-ui/core": "^4.1.2",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.6",
     "@material-ui/styles": "^4.1.2",
+    "@date-io/core": "^1.3.11",
+    "@date-io/date-fns": "^1.3.11",
+   "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.5",
     "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-links": "^5.0.11",
     "@storybook/addons": "^5.0.11",
@@ -38,7 +39,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "react-dom": "^16.8.6",
     "webpack": "^4.32.2"
   },
   "peerDependencies": {
