--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "repository": "https://github.com/actano/rplan-corporate-design.git",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint --ext js,jsx src storybook",
+    "lint": "eslint --ext js,jsx src test storybook",
+    "test": "mocha \"test/**/*.unit.jsx\" \"test/**/*.unit.js\"",
     "storybook": "start-storybook -c ./storybook/config -p 8085",
     "build-storybook": "build-storybook -c ./storybook/config"
   },
@@ -28,17 +29,29 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "@storybook/addon-actions": "^5.0.11",
     "@storybook/addon-links": "^5.0.11",
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "babel-loader": "^8.0.6",
+    "chai": "^4.2.0",
+    "chai-enzyme": "^1.0.0-beta.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.3.0",
     "eslint-config-actano": "^11.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^15.1.1",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^6.2.1",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0",
     "webpack": "^4.32.2"
   },
   "peerDependencies": {
