--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build-storybook": "build-storybook -c ./storybook/config"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^16.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@date-io/core": "^1.3.11",
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.1.2",
