--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "sanitize-html": "^1.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
