--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "@material-ui/styles": "^4.1.2",
     "@mdi/js": "^4.7.95",
     "@mdi/react": "^1.2.1",
+    "@rplan/rich-text-sanitization": "^1.0.2",
     "classnames": "^2.2.6",
     "date-fns": "2.1.0",
     "gravatar": "^1.8.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "sanitize-html": "^1.22.0"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
