--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.2.1",
-    "@material-ui/pickers": "^3.2.6",
+    "@material-ui/pickers": "^4.0.0-alpha.5",
     "@material-ui/styles": "^4.9.10",
     "@mdi/js": "^4.7.95",
     "@mdi/react": "^1.2.1",
@@ -64,7 +64,7 @@
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.2.1",
-    "@material-ui/pickers": "^3.2.6",
+    "@material-ui/pickers": "^4.0.0-alpha.5",
     "@material-ui/styles": "^4.9.10"
   }
 }
