--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
-    "@date-io/core": "^1.3.11",
-    "@date-io/date-fns": "^1.3.11",
+    "@date-io/core": "^2.5.0",
+    "@date-io/date-fns": "^2.5.0",
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^4.0.0-alpha.5",
@@ -25,7 +25,7 @@
     "@mdi/react": "^1.2.1",
     "@rplan/rich-text-sanitization": "^1.0.2",
     "classnames": "^2.2.6",
-    "date-fns": "2.1.0",
+    "date-fns": "^2.12.0",
     "gravatar": "^1.8.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
@@ -61,7 +61,7 @@
     "webpack": "^4.32.2"
   },
   "peerDependencies": {
-    "@date-io/date-fns": "^1.3.11",
+    "@date-io/date-fns": "^2.5.0",
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^4.0.0-alpha.5",
