--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-i18next": "^11.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -65,6 +66,7 @@
     "@material-ui/core": "^4.1.2",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.6",
-    "@material-ui/styles": "^4.1.2"
+    "@material-ui/styles": "^4.1.2",
+    "react-i18next": "^11.3.4"
   }
 }
