--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-i18next": "^11.3.4"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -59,7 +58,8 @@
     "mocha": "^6.2.1",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
-    "webpack": "^4.32.2"
+    "webpack": "^4.32.2",
+    "react-i18next": "^11.3.4"
   },
   "peerDependencies": {
     "@date-io/date-fns": "^1.3.11",
