--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rplan/corporate-design",
-  "version": "2.38.0",
+  "version": "2.38.1",
   "description": "Theme for Material UI and components based on the corporate design.",
   "author": "Actano GmbH (https://rplan.com/)",
   "main": "src/index.js",
@@ -56,10 +56,10 @@
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
     "mocha": "^6.2.1",
+    "react-i18next": "^11.3.4",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
-    "webpack": "^4.32.2",
-    "react-i18next": "^11.3.4"
+    "webpack": "^4.32.2"
   },
   "peerDependencies": {
     "@date-io/date-fns": "^1.3.11",
