--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@rplan/allex-i18n-tools": "^1.0.4",
     "@storybook/addon-actions": "^5.2.3",
     "@storybook/addon-knobs": "^5.3.13",
     "@storybook/addon-links": "^5.2.3",
