--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -9,6 +9,13 @@ plugins:
   - '@typescript-eslint'
 
 rules:
+  import/extensions:
+    - error
+    - ignorePackages
+    - js: never
+      jsx: never
+      ts: never
+      tsx: never
   import/no-extraneous-dependencies:
   - error
   - devDependencies:
