PA-4426: Include src in build

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "files": [
     "assets",
-    "lib"
+    "lib",
+    "src"
   ],
   "scripts": {
     "build": "yarn build:src && yarn build:declarations",
