PA-4426: Include static (and git ignore lib)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "files": [
     "assets",
     "lib",
-    "src"
+    "static"
   ],
   "scripts": {
     "build": "yarn build:src && yarn build:declarations",
