PA-4779: Add German to rtf editor

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@material-ui/styles": "^4.1.2",
     "@mdi/js": "^4.7.95",
     "@mdi/react": "^1.2.1",
+    "@rplan/featureswitch-webclient": "^2.0.0",
     "@rplan/rich-text-sanitization": "^1.0.2",
     "classnames": "^2.2.6",
     "date-fns": "2.1.0",
