PA-4651: Upgrade storybook and related resources

--- a/package.json
+++ b/package.json
@@ -58,12 +58,12 @@
     "@babel/register": "^7.0.0",
     "@rplan/allex-i18n-tools": "^1.0.11",
     "@rplan/testhelpers-webclient": "^3.2.0",
-    "@storybook/addon-actions": "^5.2.3",
-    "@storybook/addon-knobs": "^5.3.13",
-    "@storybook/addon-links": "^5.2.3",
-    "@storybook/addons": "^5.2.3",
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^5.2.3",
+    "@storybook/react": "^5.3.18",
     "@types/chai": "^4.2.8",
     "@types/chai-enzyme": "^0.6.7",
     "@types/enzyme": "^3.10.4",
@@ -92,6 +92,7 @@
     "jsdom-global": "^3.0.2",
     "mocha": "^6.2.1",
     "react-i18next": "^11.3.4",
+    "regenerator-runtime": "^0.13.5",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
     "typescript": "^3.8.3",
