--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build": "yarn build:src && yarn build:declarations",
     "build:clean": "yarn clean && yarn build",
     "build:src": "babel -d lib src --extensions .js,.ts,.jsx,.tsx",
+    "build:src:watch": "babel --watch -d lib src --extensions .js,.ts,.jsx,.tsx",
     "build:declarations": "tsc --project tsconfig.types.json",
     "clean": "rm -rf lib",
     "lint": "eslint --ext js,jsx,ts,tsx src test storybook",
