--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "@date-io/core": "^1.3.11",
     "@date-io/date-fns": "^1.3.11",
+    "@js-joda/core": "^3.0.0",
     "@material-ui/core": "^4.1.2",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.6",
