--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rplan/corporate-design",
-  "version": "2.53.10",
+  "version": "2.53.11",
   "description": "Theme for Material UI and components based on the corporate design.",
   "author": {
     "name": "Actano GmbH",
@@ -35,11 +35,7 @@
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "@date-io/core": "^1.3.11",
-    "@date-io/date-fns": "^1.3.11",
     "@js-joda/core": "^3.0.0",
-    "@material-ui/core": "^4.1.3",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/pickers": "^3.2.7",
     "@mdi/js": "^4.7.95",
     "@mdi/react": "^1.2.1",
     "@rplan/rich-text-sanitization": "^1.0.2",
@@ -57,6 +53,11 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.9.0",
     "@babel/register": "^7.0.0",
+    "@date-io/date-fns": "^1.3.11",
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.7",
+    "@material-ui/styles": "^4.10.0",
     "@rplan/allex-i18n-tools": "^1.2.0",
     "@rplan/testhelpers-webclient": "^3.2.0",
     "@storybook/addon-actions": "^5.3.18",
