--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "allex-ts-source": "src/index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/actano/rplan-corporate-design.git"
