--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@storybook/react": "^5.3.18",
     "@types/chai": "^4.2.8",
     "@types/chai-enzyme": "^0.6.7",
+    "@types/classnames": "^2.2.10",
     "@types/enzyme": "^3.10.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jsdom": "^12.2.4",
