PA-6817: Convert storybook to new version of stories API
the `storyOf` API is deprecated

--- a/package.json
+++ b/package.json
@@ -45,15 +45,16 @@
     "gravatar": "^1.8.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^16.13.1",
+    "react-dom": "^16.8.6",
+    "ts-loader": "^8.0.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.9.0",
-    "@babel/register": "^7.0.0",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@babel/register": "^7.11.5",
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
@@ -61,12 +62,13 @@
     "@material-ui/styles": "^4.10.0",
     "@rplan/allex-i18n-tools": "^1.2.0",
     "@rplan/testhelpers-webclient": "^3.2.0",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-knobs": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
+    "@storybook/addon-actions": "^6.0.22",
+    "@storybook/addon-docs": "^6.0.22",
+    "@storybook/addon-knobs": "^6.0.22",
+    "@storybook/addon-links": "^6.0.22",
+    "@storybook/addons": "^6.0.22",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^5.3.18",
+    "@storybook/react": "^6.0.22",
     "@types/chai": "^4.2.8",
     "@types/chai-enzyme": "^0.6.7",
     "@types/classnames": "^2.2.10",
@@ -79,7 +81,7 @@
     "@types/sinon-chai": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
     "enzyme": "^3.10.0",
@@ -96,11 +98,12 @@
     "jsdom-global": "^3.0.2",
     "mocha": "^6.2.1",
     "react-i18next": "^11.3.4",
+    "react-is": "^16.13.1",
     "regenerator-runtime": "^0.13.5",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
-    "typescript": "^3.8.3",
-    "webpack": "^4.32.2"
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2"
   },
   "peerDependencies": {
     "@date-io/date-fns": "^1.3.11",
