--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@storybook/addon-knobs": "^6.0.22",
     "@storybook/addon-links": "^6.0.22",
     "@storybook/addons": "^6.0.22",
+    "@storybook/cli": "^6.0.22",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^6.0.22",
     "@types/chai": "^4.2.8",
