PA-6817: Add workaround to storybook bug
see: https://github.com/storybookjs/storybook/issues/11958
The site navigation is currently broken.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "eslint --ext js,jsx,ts,tsx src test storybook",
     "test": "mocha \"test/**/*.unit.jsx\" \"test/**/*.unit.js\" \"test/**/*.unit.tsx\" \"test/**/*.unit.ts\" --exit",
     "storybook": "start-storybook -c ./storybook/config -p 8085",
-    "build-storybook": "build-storybook -c ./storybook/config",
+    "build-storybook": "build-storybook --no-dll -c ./storybook/config",
     "typecheck": "tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
