--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/jsdom": "^12.2.4",
     "@types/lodash": "^4.14.161",
     "@types/mocha": "^7.0.1",
+    "@types/react": "^16.9.49",
     "@types/sinon": "^7.5.1",
     "@types/sinon-chai": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
