--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -2,6 +2,7 @@ root: true
 extends:
 - actano
 - plugin:import/typescript
+- plugin:mdx/recommended
 
 parser: '@typescript-eslint/parser'
 
@@ -16,6 +17,7 @@ rules:
       jsx: never
       ts: never
       tsx: never
+      mdx: never
   import/no-extraneous-dependencies:
   - error
   - devDependencies:
@@ -25,6 +27,7 @@ rules:
     - 'test/**/*.jsx'
     - 'storybook/**/*.ts'
     - 'storybook/**/*.tsx'
+    - 'storybook/**/*.mdx'
     - 'test/**/*.ts'
     - 'test/**/*.tsx'
   '@typescript-eslint/no-unused-vars': error
@@ -38,8 +41,15 @@ rules:
         - '.jsx'
         - '.ts'
         - '.tsx'
+        - '.mdx'
 
 overrides:
+  - files:
+      - 'storybook/**/*.stories.mdx'
+    parser: 'eslint-mdx'
+    rules:
+      react/jsx-indent: 'off'
+      react/react-in-jsx-scope: 'off'
   - files:
       - 'test/**/*.js'
       - 'test/**/*.jsx'
@@ -49,6 +59,7 @@ overrides:
       mocha: true
     rules:
       no-unused-expressions: 'off'
+      'mdx/no-unused-expressions': 'off'
     settings:
       import/core-modules:
         - chai
