--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:src:watch": "babel --watch -d lib src --extensions .js,.ts,.jsx,.tsx",
     "build:declarations": "tsc --project tsconfig.types.json",
     "clean": "rm -rf lib",
-    "lint": "eslint --ext js,jsx,ts,tsx src test storybook",
+    "lint": "eslint --ext js,jsx,ts,tsx,mdx src test storybook",
     "test": "mocha \"test/**/*.unit.jsx\" \"test/**/*.unit.js\" \"test/**/*.unit.tsx\" \"test/**/*.unit.ts\" --exit",
     "storybook": "start-storybook -c ./storybook/config -p 8085",
     "build-storybook": "build-storybook --no-dll -c ./storybook/config",
@@ -90,8 +90,10 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.3.0",
     "eslint-config-actano": "^11.0.0",
+    "eslint-mdx": "^1.8.2",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-mdx": "^1.8.2",
     "eslint-plugin-react": "^7.11.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "i18next": "^19.4.4",
