--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.8.6",
     "ts-loader": "^8.0.4"
   },
@@ -78,7 +79,7 @@
     "@types/jsdom": "^12.2.4",
     "@types/lodash": "^4.14.161",
     "@types/mocha": "^7.0.1",
-    "@types/react": "^16.9.49",
+    "@types/react-beautiful-dnd": "^12.1.2",
     "@types/sinon": "^7.5.1",
     "@types/sinon-chai": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
