--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
+    "style-dictionary": "^2.10.2",
     "@babel/core": "^7.11.6",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
