Provide build step to generate js from tokens

--- a/design-tokens/config.json
+++ b/design-tokens/config.json
@@ -5,8 +5,8 @@
       "transformGroup": "js",
       "buildPath": "build/js/",
       "files": [{
-        "destination": "color.js",
-        "format": "javascript/es6"
+        "destination": "colors.js",
+        "format": "javascript/module"
       }],
       "filter": {
         "attributes": {
