--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "build": "yarn build:design-tokens && yarn build:src && yarn build:declarations",
     "build:design-tokens": "rm -rf design-tokens/build && cd design-tokens && style-dictionary build",
+    "download-design-tokens": "curl https://allex.zeroheight.com/api/token_file/55730748e474/share --output design-tokens/properties/tokens.json",
     "build:clean": "yarn clean && yarn build",
     "build:src": "babel -d lib src --extensions .js,.ts,.jsx,.tsx",
     "build:src:watch": "babel --watch -d lib src --extensions .js,.ts,.jsx,.tsx",
@@ -41,6 +42,7 @@
     "@mdi/js": "^4.7.95",
     "@mdi/react": "^1.2.1",
     "@rplan/rich-text-sanitization": "^1.0.2",
+    "camelcase": "^6.2.0",
     "classnames": "^2.2.6",
     "date-fns": "2.1.0",
     "gravatar": "^1.8.0",
@@ -51,7 +53,6 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
-    "style-dictionary": "^2.10.2",
     "@babel/core": "^7.11.6",
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
@@ -109,6 +110,7 @@
     "regenerator-runtime": "^0.13.5",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
+    "style-dictionary": "^2.10.2",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2"
   },
