--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "gravatar": "^1.8.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
-    "react-beautiful-dnd": "^13.0.0",
-    "ts-loader": "^8.0.4"
+    "react-beautiful-dnd": "^13.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -107,6 +106,7 @@
     "regenerator-runtime": "^0.13.5",
     "sinon": "^7.5.0",
     "sinon-chai": "^3.3.0",
+    "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2"
   },
