--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "@ckeditor/ckeditor5-build-classic": "^16.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "@date-io/core": "^1.3.11",
-    "@js-joda/core": "^3.0.0",
+    "@js-joda/core": "^3.2.0",
+    "@js-joda/timezone": "^2.3.0",
+    "@js-joda/locale_de": "^3.2.0",
+    "@js-joda/locale_en": "^3.2.0",
     "@mdi/js": "^4.7.95",
     "@mdi/react": "^1.2.1",
     "@rplan/allex-type-helpers": "^2.1.0",
