--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
     "date-fns": "2.1.0",
     "gravatar": "^1.8.0",
     "lodash": "^4.17.20",
-    "prop-types": "^15.7.2",
-    "react-beautiful-dnd": "^13.0.0"
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
